# mylib66

./: LICENSE  README.md  __init__.py  general.py  mymath.py  pyproject.toml  setup.py
.github/workflows/: build-and-publish-to-pypi.yml  pypi-publish.yml
mylib66/: __init__.py  general.py  list.py  math.py  matplotlib.py  numpy.py
