[tool.poetry]
name = "mylib66"
version = "0.1.1"
description = "Personal library"
authors = ["Chazz Yu"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/xziyu6/mylib66"
keywords = ['python', 'personal']

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.1"
numpy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
twine = "^5.1.1"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
